[tool.poetry]
name = "pso"
version = "0.1.0"
description = ""
authors = ["Danilo Nascimento <daconnas.dcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ipdb = "^0.13.13"
black = "^23.1.0"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
