[tool.poetry]
name = "pso"
version = "0.1.0"
description = ""
authors = ["Danilo Nascimento <daconnas.dcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ipdb = "^0.13.13"
black = "^23.1.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
taskipy = "^1.10.3"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
run_command = "poetry run"

[tool.taskipy.tasks]
format = "isort . && black ."
lint = "black --check --diff . && isort --check --diff ."
pre_test = "echo testing ..."
test = "pytest -s -x --cov=pso -vv"
post_test = "coverage html"